--- a/login.html
+++ b/login.html
@@ -89,5 +89,6 @@
     <script src="js/supabase-client.js"></script>
     <script src="js/auth-supabase.js"></script>
     <script src="js/auth-enhanced.js"></script>
+    <script src="js/line-login-fix.js"></script>
 </body>
 </html>
