LINEログイン競合修正: イベントリスナーの問題を解決

--- a/login.html
+++ b/login.html
@@ -89,6 +89,9 @@
     <script src="js/supabase-client.js"></script>
     <script src="js/auth-supabase.js"></script>
     <script src="js/auth-enhanced.js"></script>
-    <script src="js/line-login-fix.js"></script>
+    <!-- line-login-fix.js を一時的に無効化 -->
+    <!-- <script src="js/line-login-fix.js"></script> -->
+    <script src="js/line-login-immediate.js"></script>
+    <script src="js/line-debug.js"></script>
 </body>
 </html>
