--- a/login.html
+++ b/login.html
@@ -88,10 +88,11 @@
     <script src="js/auth-background-safe.js"></script>
     <script src="js/supabase-client.js"></script>
     <script src="js/auth-supabase.js"></script>
-    <script src="js/auth-enhanced.js"></script>
-    <!-- line-login-fix.js を一時的に無効化 -->
+    <script src="js/auth-clean.js"></script>
+    <!-- 以下は競合するため完全に無効化 -->
+    <!-- <script src="js/auth-enhanced.js"></script> -->
     <!-- <script src="js/line-login-fix.js"></script> -->
-    <script src="js/line-login-immediate.js"></script>
-    <script src="js/line-debug.js"></script>
+    <!-- <script src="js/line-login-immediate.js"></script> -->
+    <!-- <script src="js/line-debug.js"></script> -->
 </body>
 </html>
