--- a/login.html
+++ b/login.html
@@ -88,6 +88,7 @@
     <script src="js/auth-background-safe.js"></script>
     <script src="js/supabase-client.js"></script>
     <script src="js/auth-supabase.js"></script>
+    <script src="js/line-login-debug-full.js"></script>
     <script src="js/auth-clean.js"></script>
     <!-- 以下は競合するため完全に無効化 -->
     <!-- <script src="js/auth-enhanced.js"></script> -->
