--- a/login.html
+++ b/login.html
@@ -81,15 +81,15 @@
     </div>
     
     <!-- Scripts -->
-    <script src="js/error-prevention.js"></script>
-    <script src="js/null-check-fixes.js"></script>
-    <script src="js/safe-dom-utils.js"></script>
-    <script src="js/safe-storage.js"></script>
-    <script src="js/auth-background-safe.js"></script>
-    <script src="js/supabase-client.js"></script>
-    <script src="js/auth-supabase.js"></script>
-    <script src="js/line-login-debug-full.js"></script>
-    <script src="js/auth-clean.js"></script>
+    <script src="js/error-prevention.js?v=20250122"></script>
+    <script src="js/null-check-fixes.js?v=20250122"></script>
+    <script src="js/safe-dom-utils.js?v=20250122"></script>
+    <script src="js/safe-storage.js?v=20250122"></script>
+    <script src="js/auth-background-safe.js?v=20250122"></script>
+    <script src="js/supabase-client.js?v=20250122"></script>
+    <script src="js/auth-supabase.js?v=20250122"></script>
+    <script src="js/line-login-debug-full.js?v=20250122"></script>
+    <script src="js/auth-clean.js?v=20250122"></script>
     <!-- 以下は競合するため完全に無効化 -->
     <!-- <script src="js/auth-enhanced.js"></script> -->
     <!-- <script src="js/line-login-fix.js"></script> -->
