--- a/register.html
+++ b/register.html
@@ -621,9 +621,10 @@
     <script src="js/null-check-fixes.js?v=20250122"></script>
     <script src="js/safe-dom-utils.js?v=20250122"></script>
     <script src="js/safe-storage.js?v=20250122"></script>
+    <script src="js/auth-background-safe.js?v=20250122"></script>
     <script src="js/supabase-client.js?v=20250122"></script>
     <script src="js/auth-supabase.js?v=20250122"></script>
+    <script src="js/line-login-debug-full.js?v=20250122"></script>
     <script src="js/registration-flow.js?v=20250122"></script>
-    <script src="js/auth-background-safe.js?v=20250122"></script>
 </body>
 </html>
