コード全体の競合とエラー原因を徹底修正
主要な修正：
1. デバッグ用スクリプトをコメントアウト（競合解消）
   - line-button-test.js
   - line-button-fix.js
   - debug-line-button.css

2. 重複した関数定義を修正
   - window.logout関数の重複を解消（dashboard.js）
   - 存在チェックを追加して上書きを防止

3. LINEボタンのイベントリスナー競合を解消
   - デバッグ用の重複リスナーを無効化
   - 1つのボタンに1つのリスナーのみ

改善点：
- グローバル名前空間の汚染を削減
- 関数の上書きリスクを排除
- クリーンなイベント処理

--- a/register.html
+++ b/register.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/auth.css">
     <link rel="stylesheet" href="css/auth-unified.css">
     <!-- Debug CSS (一時的) -->
-    <link rel="stylesheet" href="css/debug-line-button.css">
+    <!-- <link rel="stylesheet" href="css/debug-line-button.css"> -->
 </head>
 <body>
     <div class="auth-container">
@@ -631,7 +631,8 @@
     <script src="js/line-login-debug-full.js?v=20250122"></script>
     <script src="js/registration-flow.js?v=20250122"></script>
     <!-- Debug Script (一時的) -->
-    <script src="js/line-button-test.js?v=20250122"></script>
-    <script src="js/line-button-fix.js?v=20250122"></script>
+    <!-- 競合を避けるため、デバッグ用スクリプトをコメントアウト -->
+    <!-- <script src="js/line-button-test.js?v=20250122"></script> -->
+    <!-- <script src="js/line-button-fix.js?v=20250122"></script> -->
 </body>
 </html>
