LINEログインボタンの修正：シンプルな実装に変更
問題：
- LINEログインボタンをクリックしても反応しない
- auth-supabase.jsのinitializeAuth関数が呼ばれていない

修正内容：
1. line-login-simple.js作成
   - シンプルで確実な実装
   - 既存のイベントリスナーをクリアして再設定
   - 直接的なリダイレクト処理

2. auth-supabase.js改善
   - 初期化タイミングの改善
   - 複数のタイミングで初期化を試行
   - デバッグログの追加

3. HTMLファイル修正
   - login.htmlとregister.htmlでline-login-simple.jsを使用
   - 競合する可能性のあるデバッグスクリプトを無効化

--- a/login.html
+++ b/login.html
@@ -89,8 +89,9 @@
     <script src="js/supabase-client.js?v=20250122"></script>
     <script src="js/global-functions.js?v=20250122"></script>
     <script src="js/auth-supabase.js?v=20250122"></script>
-    <script src="js/line-login-debug-full.js?v=20250122"></script>
-    <script src="js/auth-clean.js?v=20250122"></script>
+    <script src="js/line-login-simple.js?v=20250123"></script>
+    <!-- <script src="js/line-login-debug-full.js?v=20250122"></script> -->
+    <!-- <script src="js/auth-clean.js?v=20250122"></script> -->
     <!-- 以下は競合するため完全に無効化 -->
     <!-- <script src="js/auth-enhanced.js"></script> -->
     <!-- <script src="js/line-login-fix.js"></script> -->
