--- a/register.html
+++ b/register.html
@@ -629,7 +629,8 @@
     <script src="js/supabase-client.js?v=20250122"></script>
     <script src="js/global-functions.js?v=20250122"></script>
     <script src="js/auth-supabase.js?v=20250122"></script>
-    <script src="js/line-login-debug-full.js?v=20250122"></script>
+    <script src="js/line-login-simple.js?v=20250123"></script>
+    <!-- <script src="js/line-login-debug-full.js?v=20250122"></script> -->
     <script src="js/registration-flow.js?v=20250122"></script>
     <!-- Debug Script (一時的) -->
     <!-- 競合を避けるため、デバッグ用スクリプトをコメントアウト -->
