--- a/dashboard.html
+++ b/dashboard.html
@@ -32,7 +32,7 @@
         <div class="mobile-header-actions">
             <a href="notifications.html" class="notification-btn">
                 <i class="fas fa-bell"></i>
-                <span class="notification-badge">3</span>
+                <span class="notification-badge" style="display: none;">0</span>
             </a>
         </div>
     </header>
@@ -70,7 +70,7 @@
                     <a href="messages.html" class="mobile-nav-link">
                         <i class="fas fa-envelope"></i>
                         <span>メッセージ</span>
-                        <span class="badge">3</span>
+                        <span class="badge message-badge" style="display: none;">0</span>
                     </a>
                 </li>
                 <li>
@@ -139,7 +139,7 @@
                         <a href="messages.html" class="sidebar-link">
                             <i class="fas fa-envelope"></i>
                             <span>メッセージ</span>
-                            <span class="badge">3</span>
+                            <span class="badge message-badge" style="display: none;">0</span>
                         </a>
                     </li>
                     <li>
@@ -183,7 +183,7 @@
                 <div class="header-right">
                     <a href="notifications.html" class="notification-btn">
                         <i class="fas fa-bell"></i>
-                        <span class="notification-badge">3</span>
+                        <span class="notification-badge" style="display: none;">0</span>
                     </a>
                     
                     <div class="user-menu">
