--- a/dashboard.html
+++ b/dashboard.html
@@ -389,12 +389,14 @@
     <script src="js/dashboard-data-fix.js"></script>
     <script src="js/dashboard-dynamic-calculator.js"></script>
     <script src="js/dashboard-realtime-calculator.js"></script>
+    <script src="js/dashboard-event-calculator.js"></script>
     <script src="js/dashboard-member-counter.js"></script>
     <script src="js/dashboard-stat-renderer.js"></script>
     <script src="js/dashboard-ui.js"></script>
     <script src="js/dashboard-ui-fix.js"></script>
     <script src="js/dashboard-updater.js"></script>
     <script src="js/dashboard-debug.js"></script>
+    <script src="js/dashboard-event-debug.js"></script>
     <script src="js/responsive-menu-simple.js"></script>
     <script src="js/event-modal.js"></script>
     <script src="js/dashboard.js"></script>
