マッチングと未読メッセージのSupabase連携を改善
- マッチング成功数の正確な計算
- 今月と先月の比較で増減率を表示
- 未読メッセージ数の柔軟な取得
- 複数のテーブル構造に対応
- キャッシュ機能で高速化
- 包括的なデバッグツール追加
- テスト用SQLデータ作成

--- a/dashboard.html
+++ b/dashboard.html
@@ -390,6 +390,8 @@
     <script src="js/dashboard-dynamic-calculator.js"></script>
     <script src="js/dashboard-realtime-calculator.js"></script>
     <script src="js/dashboard-event-calculator.js"></script>
+    <script src="js/dashboard-matching-calculator.js"></script>
+    <script src="js/dashboard-message-calculator.js"></script>
     <script src="js/dashboard-member-counter.js"></script>
     <script src="js/dashboard-stat-renderer.js"></script>
     <script src="js/dashboard-ui.js"></script>
@@ -397,6 +399,7 @@
     <script src="js/dashboard-updater.js"></script>
     <script src="js/dashboard-debug.js"></script>
     <script src="js/dashboard-event-debug.js"></script>
+    <script src="js/dashboard-stats-debug.js"></script>
     <script src="js/responsive-menu-simple.js"></script>
     <script src="js/event-modal.js"></script>
     <script src="js/dashboard.js"></script>
