ダッシュボード統計の動的計算を完全実装
- マッチング成功数の増減率を実際のデータから計算
- 未読メッセージの増減率を実際のデータから計算
- 統計統合モジュールで全ての計算を統一管理
- 30秒ごとの自動更新
- テストページで動作確認可能
- 固定値（23%増加、5%減少）を完全に廃止

--- a/dashboard.html
+++ b/dashboard.html
@@ -403,6 +403,7 @@
     <script src="js/responsive-menu-simple.js"></script>
     <script src="js/event-modal.js"></script>
     <script src="js/dashboard.js"></script>
+    <script src="js/dashboard-stats-integrator.js"></script>
     <!-- 通知機能はJSを無効化 -->
     <!-- <script src="js/notifications.js"></script> -->
 </body>
