Fix profile edit button visibility and position - Hide all edit buttons on other users' profiles - Adjust position of profile edit button (move left and down) - Add responsive styles for mobile view

--- a/profile.html
+++ b/profile.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/buttons.css">
     <link rel="stylesheet" href="css/dashboard.css">
-    <link rel="stylesheet" href="css/profile.css">
+    <link rel="stylesheet" href="css/profile.css?v=20250729-1">
     <link rel="stylesheet" href="css/notifications.css">
     <link rel="stylesheet" href="css/responsive-menu.css">
     <link rel="stylesheet" href="css/user-menu-zindex-only.css">
@@ -516,7 +516,7 @@
     <script>console.log('responsive-menu-simple.js loaded');</script>
     <script src="js/dashboard.js"></script>
     <script>console.log('dashboard.js loaded');</script>
-    <script src="js/profile.js?v=20250729-6-nocache"></script>
+    <script src="js/profile.js?v=20250729-7"></script>
     <script>
         console.log('profile.js should be loaded');
         // デバッグ用：URLパラメータを確認
