Add manual testing script for matching functionality
- Created matching-manual-test.js for testing matching cards and radar charts
- Added manual test command manualMatchingTest() to debug matching display issues
- Includes profile data fetching, card generation, and radar chart rendering

--- a/matching.html
+++ b/matching.html
@@ -426,6 +426,7 @@
     <script src="js/matching-quick-test.js"></script>
     <script src="js/error-diagnostic.js"></script>
     <script src="js/production-ready-check.js"></script>
+    <script src="js/matching-manual-test.js"></script>
     <!-- <script src="js/notifications.js"></script> -->
 </body>
 </html>
