Add test data generator for matching functionality
- Created matching-test-data-generator.js with sample Japanese business profiles
- Includes generateTestProfiles() command to create test data in Supabase
- Includes deleteTestProfiles() command to clean up test data
- Test profiles include realistic names, titles, companies, skills, and interests

--- a/matching.html
+++ b/matching.html
@@ -427,6 +427,7 @@
     <script src="js/error-diagnostic.js"></script>
     <script src="js/production-ready-check.js"></script>
     <script src="js/matching-manual-test.js"></script>
+    <script src="js/matching-test-data-generator.js"></script>
     <!-- <script src="js/notifications.js"></script> -->
 </body>
 </html>
