Add emergency fix that immediately loads and displays matching data

--- a/matching.html
+++ b/matching.html
@@ -437,5 +437,8 @@
     
     <!-- 完全修正システム -->
     <script src="js/matching-complete-fix.js"></script>
+    
+    <!-- 緊急修正 - 最後に読み込む -->
+    <script src="js/matching-emergency-fix.js"></script>
 </body>
 </html>
