Add full implementation with proper matching score calculation and profile details

--- a/matching.html
+++ b/matching.html
@@ -440,5 +440,8 @@
     
     <!-- 緊急修正 - 最後に読み込む -->
     <script src="js/matching-emergency-fix.js"></script>
+    
+    <!-- 完全実装版 - 最終 -->
+    <script src="js/matching-full-implementation.js"></script>
 </body>
 </html>
