--- a/matching.html
+++ b/matching.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/responsive-menu.css">
     <link rel="stylesheet" href="css/user-menu-zindex-only.css">
     <link rel="stylesheet" href="css/matching-mobile-fix.css">
+    <link rel="stylesheet" href="css/matching-final-styles.css">
 </head>
 <body>
     <!-- Mobile Header -->
