Add perfect display implementation with complete profile handling and empty state indicators

--- a/matching.html
+++ b/matching.html
@@ -450,5 +450,8 @@
     
     <!-- 最終修正スクリプト -->
     <script src="js/matching-fix-all-issues.js"></script>
+    
+    <!-- 完璧な表示実装 -->
+    <script src="js/matching-perfect-display.js"></script>
 </body>
 </html>
