Add complete display override with proper empty state indicators for missing profile information

--- a/matching.html
+++ b/matching.html
@@ -453,5 +453,8 @@
     
     <!-- 完璧な表示実装 -->
     <script src="js/matching-perfect-display.js"></script>
+    
+    <!-- 表示の完全オーバーライド -->
+    <script src="js/matching-display-override.js"></script>
 </body>
 </html>
