Implement realistic matching score calculation with proper range (20-85%)

--- a/matching.html
+++ b/matching.html
@@ -456,5 +456,8 @@
     
     <!-- 表示の完全オーバーライド -->
     <script src="js/matching-display-override.js"></script>
+    
+    <!-- 現実的なマッチングスコア計算 -->
+    <script src="js/matching-realistic-scoring.js"></script>
 </body>
 </html>
