Add conflict resolver and cleanup scripts to fix all matching conflicts and errors

--- a/matching.html
+++ b/matching.html
@@ -462,5 +462,9 @@
     
     <!-- 最終完成版（tl;dv対応） -->
     <script src="js/matching-final-complete.js"></script>
+    
+    <!-- 競合解決とクリーンアップ -->
+    <script src="js/matching-conflict-resolver.js"></script>
+    <script src="js/matching-cleanup.js"></script>
 </body>
 </html>
