feat: マッチング検索機能追加、ダッシュボード統計修正、未読メッセージ削除
- マッチング検索機能の実装 (matching-search.js)
- ダッシュボードの統計情報を動的計算に修正
- 未読メッセージ表示を完全削除
- テーブル名の修正 (user_profiles→profiles, event_items→events)

--- a/matching.html
+++ b/matching.html
@@ -466,5 +466,8 @@
     <!-- 競合解決とクリーンアップ -->
     <script src="js/matching-conflict-resolver.js"></script>
     <script src="js/matching-cleanup.js"></script>
+    
+    <!-- 検索機能 -->
+    <script src="js/matching-search.js"></script>
 </body>
 </html>
