fix: マッチングスコアの多様性問題を修正
- 55%と35%のみになる問題を解決
- より多様なスコア計算アルゴリズムを実装
- 正規分布的なスコア分布（15-95%）
- 現在のユーザーとの詳細な比較機能追加

--- a/matching.html
+++ b/matching.html
@@ -469,5 +469,8 @@
     
     <!-- 検索機能 -->
     <script src="js/matching-search.js"></script>
+    
+    <!-- スコア計算修正 -->
+    <script src="js/matching-score-fix.js"></script>
 </body>
 </html>
