fix: マッチングプロファイルのnullエラーを修正
- undefined読み取りエラー (Cannot read properties of undefined) を解決
- プロファイルデータの検証とデフォルト値設定
- calculateMatchingScoresとloadProfilesOptimizedの安全性向上
- エラーハンドリングの強化

--- a/matching.html
+++ b/matching.html
@@ -472,5 +472,8 @@
     
     <!-- スコア計算修正 -->
     <script src="js/matching-score-fix.js"></script>
+    
+    <!-- プロファイルnullエラー修正 -->
+    <script src="js/matching-profile-null-fix.js"></script>
 </body>
 </html>
