feat: プロファイル詳細表示機能の実装
- モーダルでの詳細プロファイル表示
- マッチング度の詳細分析表示
- 共通スキル・興味の可視化
- レーダーチャートによる6軸評価
- コネクト申請・メッセージ送信・ブックマーク機能
- tl;dv議事録データの表示（該当者のみ）
- レスポンシブ対応とアニメーション

--- a/matching.html
+++ b/matching.html
@@ -475,5 +475,8 @@
     
     <!-- プロファイルnullエラー修正 -->
     <script src="js/matching-profile-null-fix.js"></script>
+    
+    <!-- プロファイル詳細モーダル -->
+    <script src="js/profile-detail-modal.js"></script>
 </body>
 </html>
