--- a/matching.html
+++ b/matching.html
@@ -467,6 +467,9 @@
     <!-- 完璧な統合のテスト -->
     <script src="js/matching-perfect-test.js"></script>
     
+    <!-- ホバーアニメーション無効化 -->
+    <script src="js/matching-hover-fix.js"></script>
+    
     <!-- 以下のスクリプトは全て無効化されています -->
     <!--
     <script src="js/matching-complete-fix.js"></script>
