レーダーチャートのホバー/タッチアニメーションを完全に無効化
- matching-hover-complete-fix.js を作成
- PerfectRadarChartクラスを完全に置き換え
- CSSでもトランジションを無効化
- タッチデバイスのタップハイライトも無効化
- 既存チャートの再描画にも対応

--- a/matching.html
+++ b/matching.html
@@ -469,6 +469,7 @@
     
     <!-- ホバーアニメーション無効化 -->
     <script src="js/matching-hover-fix.js"></script>
+    <script src="js/matching-hover-complete-fix.js"></script>
     
     <!-- 以下のスクリプトは全て無効化されています -->
     <!--
