--- a/index.html
+++ b/index.html
@@ -727,6 +727,8 @@
     <script src="js/safe-dom-utils.js"></script>
     <script src="js/safe-storage.js"></script>
     <!-- ローディング動画修正 -->
+    <!-- ローディング画面の最終修正 -->
+    <script src="js/homepage-loading-final-fix.js"></script>
     <script src="js/homepage-loading-video-fix.js"></script>
     <!-- 完璧な最終版（すべての競合解決とスクロール効果統合） -->
     <script src="js/homepage-perfect-final.js"></script>
