ローディング中のヒーローコンテンツ表示問題を完全に修正
- homepage-loading-hide.css を作成
- ローディング中はすべてのメインコンテンツを非表示
- 特に「powered by ベテランAI」と「今すぐ始める」ボタンを確実に非表示
- loading-completeクラスで表示制御
- homepage-loading-final-jsとhomepage-perfect-final.jsの両方で対応

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <!-- <link rel="stylesheet" href="css/loading-screen.css"> -->
     <link rel="stylesheet" href="css/hero-mobile-breaks.css">
     <link rel="stylesheet" href="css/news-category-mobile-fix.css">
+    <!-- ローディング中のコンテンツ非表示 -->
+    <link rel="stylesheet" href="css/homepage-loading-hide.css">
 </head>
 <body>
     <!-- プリローディング画面（最初に表示） -->
