ローディング中のヒーローコンテンツ表示を完全に解決
- homepage-instant-hide.js を作成して即座に非表示処理
- homepage-loading-hide.css により具体的なセレクタを追加
- display: none !important を追加して確実に非表示
- head内でスクリプトを実行して最速で非表示を適用

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     <link rel="stylesheet" href="css/news-category-mobile-fix.css">
     <!-- ローディング中のコンテンツ非表示 -->
     <link rel="stylesheet" href="css/homepage-loading-hide.css">
+    
+    <!-- 即座にコンテンツを非表示 -->
+    <script src="js/homepage-instant-hide.js"></script>
 </head>
 <body>
     <!-- プリローディング画面（最初に表示） -->
