新規登録ページのレイアウト問題を修正
- auth-register-fix.css を作成
- 認証カードの高さ制限を解除（height: auto）
- フォームステップの高さ制限を解除
- ステップ4,5の固定ナビゲーションを相対位置に変更
- チャレンジセクションをグリッドレイアウトで整理
- レスポンシブ対応の改善
- スクロールバーのスタイル追加

--- a/register.html
+++ b/register.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="css/buttons.css">
     <link rel="stylesheet" href="css/auth.css">
     <link rel="stylesheet" href="css/auth-unified.css">
+    <!-- レジスター画面のレイアウト修正 -->
+    <link rel="stylesheet" href="css/auth-register-fix.css">
     <!-- Debug CSS (一時的) -->
     <!-- <link rel="stylesheet" href="css/debug-line-button.css"> -->
 </head>
