メンバーページのプロフィールモーダル機能を実装
- members-profile-modal.js を作成
- members-profile-modal.css を作成
- プロフィールボタンクリックでモーダル表示（URLリダイレクトではなく）
- サイドバーは「メンバー」のままアクティブ状態を維持
- 5つのタブ機能（基本情報、経歴、スキル、興味・関心、事業課題）を実装
- 各タブクリックで内容切り替え
- Supabaseから実際のユーザーデータを取得して表示
- 閲覧履歴機能との連携

--- a/members.html
+++ b/members.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/dashboard.css">
     <link rel="stylesheet" href="css/members.css">
     <link rel="stylesheet" href="css/member-profile-preview.css">
+    <link rel="stylesheet" href="css/members-profile-modal.css">
     <link rel="stylesheet" href="css/notifications.css">
     <link rel="stylesheet" href="css/realtime-notifications.css">
     <link rel="stylesheet" href="css/responsive-menu.css">
@@ -299,6 +300,7 @@
     <!-- Members specific scripts -->
     <script src="js/members-supabase.js?v=20250729"></script>
     <script src="js/member-profile-preview.js"></script>
+    <script src="js/members-profile-modal.js"></script>
     <script src="js/members-search.js?v=20250729"></script>
     <script src="js/members-connection.js?v=20250729"></script>
     <script src="js/members-view-mode.js?v=20250729"></script>
