--- a/register.html
+++ b/register.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="css/auth-unified.css">
     <!-- レジスター画面のレイアウト修正 -->
     <link rel="stylesheet" href="css/auth-register-fix.css">
+    <!-- SNS登録セクション削除 -->
+    <link rel="stylesheet" href="css/register-sns-removal.css">
     <!-- Debug CSS (一時的) -->
     <!-- <link rel="stylesheet" href="css/debug-line-button.css"> -->
 </head>
@@ -634,6 +636,8 @@
     <script src="js/line-login-simple.js?v=20250123"></script>
     <!-- <script src="js/line-login-debug-full.js?v=20250122"></script> -->
     <script src="js/registration-flow.js?v=20250122"></script>
+    <!-- 新規登録ページの機能修正 -->
+    <script src="js/register-functions-fix.js"></script>
     <!-- Debug Script (一時的) -->
     <!-- 競合を避けるため、デバッグ用スクリプトをコメントアウト -->
     <!-- <script src="js/line-button-test.js?v=20250122"></script> -->
