ヒーローセクションのサイズを元に戻す修正
- section-badgeのサイズを元の0.875rem（14px）に戻す
- hero-buttonsのボタンサイズを元の1.125rem（18px）に戻す
- パディングも元のサイズに復元
- モバイル対応も含めて完全に元のサイズに

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     <link rel="stylesheet" href="css/homepage-loading-hide.css">
     <!-- 動画プリロード修正 -->
     <link rel="stylesheet" href="css/homepage-video-preload-fix.css">
+    <!-- ヒーローセクションのサイズ復元 -->
+    <link rel="stylesheet" href="css/hero-size-restore.css">
     
     <!-- 即座にコンテンツを非表示（修正版） -->
     <script src="js/homepage-instant-hide-fix.js"></script>
