ゲストログイン機能と新規登録ボタン修正
- ゲストログイン時にデモデータを表示するGuestModeManagerを実装
- Supabaseクエリをインターセプトしてデモデータを返す仕組み
- 新規登録ページのnextStepボタンに詳細なデバッグログを追加
- ボタンクリック、バリデーション、ステップ移動のログを出力
- パスワード表示/非表示トグルと文字数カウント機能も修正

--- a/dashboard.html
+++ b/dashboard.html
@@ -374,6 +374,8 @@
     <!-- Scripts -->
     <!-- Core initialization (must be first) -->
     <script src="js/interconnect-core.js"></script>
+    <!-- ゲストモード管理 -->
+    <script src="js/guest-mode-manager.js"></script>
     
     <!-- Dashboard early fix (Supabaseプレースホルダー) -->
     <script src="js/dashboard-early-fix.js"></script>
