--- a/register.html
+++ b/register.html
@@ -638,6 +638,8 @@
     <script src="js/registration-flow.js?v=20250122"></script>
     <!-- 新規登録ページの機能修正 -->
     <script src="js/register-functions-fix.js"></script>
+    <!-- nextStepボタンの完全修正とデバッグログ -->
+    <script src="js/register-button-fix-complete.js"></script>
     <!-- Debug Script (一時的) -->
     <!-- 競合を避けるため、デバッグ用スクリプトをコメントアウト -->
     <!-- <script src="js/line-button-test.js?v=20250122"></script> -->
