--- a/login.html
+++ b/login.html
@@ -88,6 +88,9 @@
     <script src="js/auth-background-safe.js?v=20250122"></script>
     <script src="js/supabase-client.js?v=20250122"></script>
     <script src="js/global-functions.js?v=20250122"></script>
+    <!-- ゲストモード管理 -->
+    <script src="js/guest-mode-manager.js"></script>
+    <script src="js/guest-login-handler.js"></script>
     <script src="js/auth-supabase.js?v=20250122"></script>
     <script src="js/line-login-simple.js?v=20250123"></script>
     <!-- <script src="js/line-login-debug-full.js?v=20250122"></script> -->
