ヒーローセクションのサイズ強制修正とパスワード再発行機能
- hero-size-force-fix.cssで全ての競合コードを上書き
- インラインスタイルも強制的に無効化
- セレクターの詳細度を最大限に高めて確実に適用
- パスワード再発行ページ(forgot-password.html)を作成
- Supabaseのauth.resetPasswordForEmailを使用
- メール送信後の成功/エラーメッセージ表示機能

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     <link rel="stylesheet" href="css/homepage-video-preload-fix.css">
     <!-- ヒーローセクションのサイズ復元 -->
     <link rel="stylesheet" href="css/hero-size-restore.css">
+    <!-- ヒーローセクションのサイズ強制修正 -->
+    <link rel="stylesheet" href="css/hero-size-force-fix.css">
     
     <!-- 即座にコンテンツを非表示（修正版） -->
     <script src="js/homepage-instant-hide-fix.js"></script>
