--- a/index.html
+++ b/index.html
@@ -50,13 +50,11 @@
     <link rel="stylesheet" href="css/hero-flex-override.css">
     <!-- 最終完全修正（斜め線削除と中央配置） -->
     <link rel="stylesheet" href="css/hero-final-fix-all.css">
+    <!-- 最終解決策CSS（Ver.006準拠） -->
+    <link rel="stylesheet" href="css/hero-final-solution.css">
     
-    <!-- 究極の修正（最初に実行） -->
-    <script src="js/hero-ultimate-fix.js"></script>
     <!-- 即座にコンテンツを非表示（修正版） -->
     <script src="js/homepage-instant-hide-fix.js"></script>
-    <!-- ヒーロー要素の完全保護 -->
-    <script src="js/hero-complete-fix.js"></script>
 </head>
 <body>
     <!-- プリローディング画面（最初に表示） -->
@@ -749,26 +747,13 @@
     <script src="js/null-check-fixes.js"></script>
     <script src="js/safe-dom-utils.js"></script>
     <script src="js/safe-storage.js"></script>
-    <!-- ヒーロー競合を完全排除 -->
-    <script src="js/hero-conflict-eliminator.js"></script>
-    <!-- Ver.006完全復元 -->
-    <script src="js/hero-ver006-restore.js"></script>
+    <!-- エラー修正（最初にロード） -->
+    <script src="js/hero-error-fix.js"></script>
     <!-- 最終中央配置修正 -->
     <script src="js/hero-final-center-fix.js"></script>
-    <!-- display: none修正 -->
-    <script src="js/hero-display-fix.js"></script>
-    <!-- transform完全ブロック -->
-    <script src="js/hero-transform-blocker.js"></script>
-    <!-- スタイル診断ツール -->
-    <script src="js/hero-style-diagnostics.js"></script>
-    <!-- 超詳細デバッグログ -->
-    <script src="js/hero-debug-logger.js"></script>
-    <!-- 最終絶対修正 -->
-    <script src="js/hero-absolute-fix.js"></script>
-    <!-- Matrix値ブロッカー -->
+    <!-- Matrix値ブロッカー（シンプル版） -->
     <script src="js/hero-matrix-blocker.js"></script>
     <!-- ローディング動画修正 -->
-    <!-- ローディング画面の最終修正 -->
     <script src="js/homepage-loading-final-fix.js"></script>
     <script src="js/homepage-loading-video-fix.js"></script>
     <!-- 完璧な最終版（すべての競合解決とスクロール効果統合） -->
