ヒーローセクションのチカチカ問題を完全解決
- hero-stop-all-conflicts.jsを作成し、すべてのsetInterval/setTimeoutを停止
- homepage-perfect-final.jsのタイプライター効果を無効化
- hero-absolute-final.cssで最高優先度のスタイルを適用
- 不要なhero-final-center-fixとhero-matrix-blockerをindex.htmlから削除
- すべてのアニメーションとトランジションを無効化してチカチカを防止

--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
     <link rel="stylesheet" href="css/hero-final-fix-all.css">
     <!-- 最終解決策CSS（Ver.006準拠） -->
     <link rel="stylesheet" href="css/hero-final-solution.css">
+    <!-- 絶対最終CSS（すべてを上書き） -->
+    <link rel="stylesheet" href="css/hero-absolute-final.css">
     
+    <!-- すべての競合を停止（最初に実行） -->
+    <script src="js/hero-stop-all-conflicts.js"></script>
     <!-- 即座にコンテンツを非表示（修正版） -->
     <script src="js/homepage-instant-hide-fix.js"></script>
 </head>
@@ -749,10 +753,6 @@
     <script src="js/safe-storage.js"></script>
     <!-- エラー修正（最初にロード） -->
     <script src="js/hero-error-fix.js"></script>
-    <!-- 最終中央配置修正 -->
-    <script src="js/hero-final-center-fix.js"></script>
-    <!-- Matrix値ブロッカー（シンプル版） -->
-    <script src="js/hero-matrix-blocker.js"></script>
     <!-- ローディング動画修正 -->
     <script src="js/homepage-loading-final-fix.js"></script>
     <script src="js/homepage-loading-video-fix.js"></script>
