ヒーローセクションの根本解決 - 完全なクリーンアップ
- 22個のhero関連ファイルをすべて削除
- シンプルな1つのhero.cssに統合
- homepage-instant-hide-fix.jsとhomepage-loading-hide.cssを削除（非表示の原因）
- hero-simple.jsで即座に表示するように修正
- 複雑な上書きや強制停止をすべて排除し、最小限の実装に戻した

--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
     
     <!-- Styles -->
     <link rel="stylesheet" href="css/style.css">
-    <!-- Style.css Hero Override -->
-    <link rel="stylesheet" href="css/hero-style-css-override.css">
     <link rel="stylesheet" href="css/buttons.css">
     <link rel="stylesheet" href="css/notifications.css">
     <link rel="stylesheet" href="css/navbar-fresh.css">
@@ -34,31 +32,14 @@
     <!-- <link rel="stylesheet" href="css/scroll-animations.css"> -->
     <!-- loading-screen.css は homepage-perfect-final.js に統合済み -->
     <!-- <link rel="stylesheet" href="css/loading-screen.css"> -->
-    <link rel="stylesheet" href="css/hero-mobile-breaks.css">
     <link rel="stylesheet" href="css/news-category-mobile-fix.css">
-    <!-- ローディング中のコンテンツ非表示 -->
-    <link rel="stylesheet" href="css/homepage-loading-hide.css">
     <!-- 動画プリロード修正 -->
     <link rel="stylesheet" href="css/homepage-video-preload-fix.css">
-    <!-- ヒーローセクション復元スタイル（Ver.006準拠） -->
-    <link rel="stylesheet" href="css/hero-restored.css">
-    <!-- 最終強制上書きスタイル（すべての競合を無効化） -->
-    <link rel="stylesheet" href="css/hero-override-final.css">
-    <!-- Ver.006完全一致CSS -->
-    <link rel="stylesheet" href="css/hero-ver006-exact.css">
-    <!-- Flexレイアウト上書き -->
-    <link rel="stylesheet" href="css/hero-flex-override.css">
-    <!-- 最終完全修正（斜め線削除と中央配置） -->
-    <link rel="stylesheet" href="css/hero-final-fix-all.css">
-    <!-- 最終解決策CSS（Ver.006準拠） -->
-    <link rel="stylesheet" href="css/hero-final-solution.css">
-    <!-- 絶対最終CSS（すべてを上書き） -->
-    <link rel="stylesheet" href="css/hero-absolute-final.css">
+    <!-- ヒーローセクション -->
+    <link rel="stylesheet" href="css/hero.css">
     
-    <!-- すべての競合を停止（最初に実行） -->
-    <script src="js/hero-stop-all-conflicts.js"></script>
-    <!-- 即座にコンテンツを非表示（修正版） -->
-    <script src="js/homepage-instant-hide-fix.js"></script>
+    <!-- ヒーローシンプル表示 -->
+    <script src="js/hero-simple.js"></script>
 </head>
 <body>
     <!-- プリローディング画面（最初に表示） -->
@@ -751,8 +732,6 @@
     <script src="js/null-check-fixes.js"></script>
     <script src="js/safe-dom-utils.js"></script>
     <script src="js/safe-storage.js"></script>
-    <!-- エラー修正（最初にロード） -->
-    <script src="js/hero-error-fix.js"></script>
     <!-- ローディング動画修正 -->
     <script src="js/homepage-loading-final-fix.js"></script>
     <script src="js/homepage-loading-video-fix.js"></script>
