--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     <link rel="stylesheet" href="css/homepage-video-preload-fix.css">
     <!-- ヒーローセクション -->
     <link rel="stylesheet" href="css/hero.css">
+    <!-- デバッグ用：擬似要素を可視化 -->
+    <link rel="stylesheet" href="css/debug-pseudo-elements.css">
     
     <!-- ヒーローシンプル表示 -->
     <script src="js/hero-simple.js"></script>
