斜め線を完全に削除するための追加修正
- hero-slant-fix.css: 斜め線を強制的に非表示にする専用CSS
- hero-slant-remover.js: JavaScriptから動的に斜め線を削除
- 複数の方法で斜め線を確実に削除

--- a/index.html
+++ b/index.html
@@ -37,11 +37,15 @@
     <link rel="stylesheet" href="css/homepage-video-preload-fix.css">
     <!-- ヒーローセクション -->
     <link rel="stylesheet" href="css/hero.css">
+    <!-- 斜め線の強制削除 -->
+    <link rel="stylesheet" href="css/hero-slant-fix.css">
     <!-- デバッグ用：擬似要素を可視化 -->
     <link rel="stylesheet" href="css/debug-pseudo-elements.css">
     
     <!-- ヒーローシンプル表示 -->
     <script src="js/hero-simple.js"></script>
+    <!-- 斜め線削除スクリプト -->
+    <script src="js/hero-slant-remover.js"></script>
 </head>
 <body>
     <!-- プリローディング画面（最初に表示） -->
