タイプライター効果を追加（3倍速）
- ローディング完了後に自動的に開始
- section-badge、hero-title、hero-subtitleに順番に適用
- ボタンはタイプライター完了後にフェードイン

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     <script src="js/hero-simple.js"></script>
     <!-- 斜め線削除スクリプト -->
     <script src="js/hero-slant-remover.js"></script>
+    <!-- タイプライター効果 -->
+    <script src="js/typewriter-effect.js"></script>
 </head>
 <body>
     <!-- プリローディング画面（最初に表示） -->
