タイプライター効果のタイミング修正
- ローディング画面の終了を正確に検知
- テキストの初期状態を非表示に設定
- hero-simple.jsとの競合を解消

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     <link rel="stylesheet" href="css/homepage-video-preload-fix.css">
     <!-- ヒーローセクション -->
     <link rel="stylesheet" href="css/hero.css">
+    <!-- タイプライター初期状態 -->
+    <link rel="stylesheet" href="css/typewriter-init.css">
     <!-- 斜め線の強制削除 -->
     <link rel="stylesheet" href="css/hero-slant-fix.css">
     
