紹介プログラム機能の完全実装: tl:dv API連携、不正検知、キャッシュアウト、管理画面

--- a/dashboard.html
+++ b/dashboard.html
@@ -89,6 +89,12 @@
                     </a>
                 </li>
                 <li>
+                    <a href="referral.html" class="mobile-nav-link">
+                        <i class="fas fa-user-plus"></i>
+                        <span>紹介プログラム</span>
+                    </a>
+                </li>
+                <li>
                     <a href="profile.html" class="mobile-nav-link">
                         <i class="fas fa-user"></i>
                         <span>プロフィール</span>
@@ -155,6 +161,12 @@
                         <a href="matching.html" class="sidebar-link">
                             <i class="fas fa-handshake"></i>
                             <span>マッチング</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="referral.html" class="sidebar-link">
+                            <i class="fas fa-user-plus"></i>
+                            <span>紹介プログラム</span>
                         </a>
                     </li>
                     <li>
@@ -252,6 +264,21 @@
                         <div class="stat-change positive">
                             <i class="fas fa-arrow-up"></i>
                             <span>読み込み中...</span>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="stat-card referral-card">
+                    <div class="stat-icon">
+                        <i class="fas fa-user-plus"></i>
+                    </div>
+                    <div class="stat-content">
+                        <div class="stat-value" id="referral-points">--</div>
+                        <div class="stat-label">紹介ポイント</div>
+                        <div class="stat-action">
+                            <a href="referral.html" class="btn-primary-small">
+                                <i class="fas fa-share-alt"></i> 友達を紹介
+                            </a>
                         </div>
                     </div>
                 </div>
