--- a/register.html
+++ b/register.html
@@ -651,6 +651,10 @@
     </div>
 
     <!-- Scripts -->
+    <!-- Supabase -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="js/supabase-client.js"></script>
+    
     <script src="js/error-prevention.js"></script>
     <script src="js/null-check-fixes.js"></script>
     <script src="js/safe-dom-utils.js"></script>
@@ -665,5 +669,9 @@
     <script src="js/register-button-fix-complete.js"></script>
     <!-- 強化されたバリデーション -->
     <script src="js/register-enhanced-validation.js"></script>
+    <!-- 厳密なバリデーションとボタン制御 -->
+    <script src="js/register-strict-validation.js"></script>
+    <!-- 招待コード対応の登録処理 -->
+    <script src="js/register-with-invite.js"></script>
 </body>
 </html>
