CSS競合修正とtypoチェック完了

--- a/dashboard.html
+++ b/dashboard.html
@@ -30,6 +30,8 @@
     <link rel="stylesheet" href="css/activity-enhanced.css">
     <link rel="stylesheet" href="css/activity-event-filter.css">
     <link rel="stylesheet" href="css/dashboard-charts.css">
+    <!-- CSS競合修正 -->
+    <link rel="stylesheet" href="css/css-conflict-fix.css">
 </head>
 <body>
     <!-- Mobile Header -->
