--- a/register.html
+++ b/register.html
@@ -16,12 +16,13 @@
     <!-- Styles -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/buttons.css">
-    <link rel="stylesheet" href="css/auth.css">
     <link rel="stylesheet" href="css/auth-unified.css">
     <!-- レジスター画面のレイアウト修正 -->
     <link rel="stylesheet" href="css/auth-register-fix.css">
     <!-- SNS登録セクション削除 -->
     <link rel="stylesheet" href="css/register-sns-removal.css">
+    <!-- CSS競合修正 -->
+    <link rel="stylesheet" href="css/css-conflict-fix.css">
 </head>
 <body>
     <div class="auth-container">
