レスポンシブ完全対応と404エラー修正完了

--- a/dashboard.html
+++ b/dashboard.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="css/dashboard-charts.css">
     <!-- CSS競合修正 -->
     <link rel="stylesheet" href="css/css-conflict-fix.css">
+    <link rel="stylesheet" href="css/responsive-complete.css">
 </head>
 <body>
     <!-- Mobile Header -->
