--- a/members.html
+++ b/members.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/realtime-notifications.css">
     <link rel="stylesheet" href="css/responsive-menu.css">
     <link rel="stylesheet" href="css/user-menu-zindex-only.css">
+    <link rel="stylesheet" href="css/responsive-complete.css">
 </head>
 <body>
     <!-- Mobile Header -->
